--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,12 @@
     --popover: 0 0% 100%;
     --popover-foreground: 240 10% 3.9%;
     --primary: 142.1 76.2% 36.3%;
+    --primary-500:150 100% 50%;
+    --primary-600:165 70% 50%;
+    --primary-700:145 40% 40%;
+    --primary-800:150 30% 35%;
+    --primary-900:150 20% 25%;
+    --primary-950:150 10% 20%;
     --primary-foreground: 355.7 100% 97.3%;
     --secondary: 240 4.8% 95.9%;
     --secondary-foreground: 240 5.9% 10%;
