change img to avatar

--- a/src/pages/profile/ProfileStyle.css
+++ b/src/pages/profile/ProfileStyle.css
@@ -18,7 +18,7 @@
 }
 
 @media (max-width: 640px) {
-    .half-image img {
+    .profile-img {
         bottom: -25%;
         left: 0%;
         width: 120px;
