--- a/src/pages/profile/ProfileStyle.css
+++ b/src/pages/profile/ProfileStyle.css
@@ -1,33 +1,9 @@
 .half-image {
-    position: relative;
+  background-image: linear-gradient(to right, #3d8f5f 50%, transparent 50%);
 }
 
-.profile-img {
-    position: absolute;
-    bottom: -30%;
-    left: 0;
-    width: 180px;
-    height: 180px;
-    border-radius: 50%;
-    border: 4px solid white;
-}
-
-.content {
-    margin-left: 10rem;
-    font-size: 50px;
-}
-
-@media (max-width: 640px) {
-    .profile-img {
-        bottom: -25%;
-        left: 0%;
-        width: 120px;
-        height: 120px;
-    }
-
-    .content {
-        margin-left: 7rem;
-        margin-top: 4rem;
-        font-size: 20px;
-    }
+@media (max-width: 1023px) {
+  .half-image {
+    background-image: linear-gradient(to bottom, #3d8f5f 50%, transparent 50%);
+  }
 }
